2009-02-14 Dietmar Warning
 * src/spicelib/parser/inpdomod.c: map level 10 to bsimsoi4 and map ancient 
   version 4.0 and 4.1 of bsim4 to available version 4.2
 * DEVICES: corrections and actualizations, add short adms model descriptions
 * adms/hicum0/admsva/hicum0.va: a slight fix of TFH in version 1.12
 * adms/hicum2/admsva/hicum2.va: general update to version 2.23

2009-02-12 Dietmar Warning
 * src/include/missing_math.h, src/maths/misc/isinf.c: fix a conflict under
   certain conditions 

2009-02-12 Holger Vogt
 * device.c:908 remove bug: reset i to 0
   x11.c: allow closing of plot windows with WM x-button

2009-02-10 Holger Vogt
 * windisp.c, X11.c, postcom.c
   'destroy plot1' now deletes all graphs (plot windows)
   associated with the plot 'plot1' before the data of plot1
   are deleted, to prevent a crash due to unsuccessful redrawing  
 
2009-02-07 Holger Vogt
 * device.c, inpcom.c
   alter and altermod commands reinstated and improved

2009-02-01 Dietmar Warning
 * alloc.c, outitf.c: exclude heap usage for windows compile under __MINGW__
 * resource.c: meminfo api usage not for commandline version

2009-02-01 Holger Vogt
 * alloc.c, outitf.c: Use the new heap only for tclspice in Windows 
   (HAS_TCLWIN defined) because of a crash in the 'destroy' command  
   inpcom.c:1807 do not remove white spaces in an alter or altermod command

2009-01-31 Holger Vogt
 * xpressn.c, spicenum.c, numparam.h, runcoms.c, runcoms2.c:
   Incompatibilty to MAC OSX removed by proper variable declarations
 * subckt.c: bug no. 2293284: preliminary change, further tests required
 
2009-01-26 Lionel Sainte Cluque
 * man/man1/ngspice.1,
 * man/man1/nutmeg.1:
   apply Ahmed El-Mahmoudy's patch on hyphens in manpages.

2009-01-18 Paolo Nenzi
 * src/frontend/plotting/plotit.c,
 * src/frontend/plotting/plotcurv.c:
   33: Fixed some of the existing problemass SMITH PLOT. There were 2 errors:
       one in plotit() to calculate the transformation line (r-1) / (r +1) 